# ping-pong

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/pingpong/: app.py  ball.py  paddle.py
tests/: test_pingpong.py
