[metadata]
name = pingpong
version = 0.0.1
description = pingpong game
long_description = file: README.md
long_description_content_type = text/markdown
author = Guillermo Garcia

[options]
python_requires >=3.10
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    pingpong = pingpong.app:main

